Added some sponsors

--- a/www/index.html
+++ b/www/index.html
@@ -71,7 +71,7 @@
                     <a class="nav-link js-scroll-trigger" href="#aikataulu" data-t hidden>section.timetable.title</a>
 		        </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#baarit" data-t hidden>section.partners.menu-title</a>
+                    <a class="nav-link js-scroll-trigger" href="#baarit" data-t>section.partners.menu-title</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/laulut" data-t>section.songs.title</a>
@@ -276,33 +276,26 @@
     </div>
 </section>
 
-<section id="baarit" class="white-section" hidden>
+<section id="baarit" class="grey-section">
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
                 <h2 class="blue-text" data-t>section.partners.title</h2>
                 <div class="imgcontainer">
-                    <img src="/images/sponsors/Tuiteri.png" class="companyLogo" alt="Bar Tuiteri"/>
-                    <img src="/images/sponsors/Muurmanni.png" class="companyLogo" alt="Muurmanni"/>
-                    <img src="/images/sponsors/Juoma.png" class="companyLogo" alt="Pub Juoma"/>
-                    <img src="/images/sponsors/Teerenpeli.png" class="companyLogo" alt="Teerenpeli"/>
-                    <img src="/images/sponsors/Melbourne.png" class="companyLogo" alt="Melbourne"/>
-                    <img src="/images/sponsors/Pääkonttori.png" class="companyLogo" alt="Pub Pääkonttori"/>
-                    <img src="/images/sponsors/UrkanBaari.png" class="companyLogo" alt="Urkan Baari"/>
-                    <img src="/images/sponsors/Cheers.png" class="companyLogo" alt="Cheers"/>
-                    <img src="/images/sponsors/Myllykki.png" class="companyLogo" alt="Myllykki"/>
-                    <img src="/images/sponsors/Unelma.png" class="companyLogo" alt="Unelma"/>
-                    <img src="/images/sponsors/Kierre.png" class="companyLogo" alt="Pub Kierre"/>
-                    <img src="/images/sponsors/Kyläbaari.png" class="companyLogo" alt="Meidän Kyläbaari"/>
-                    <img src="/images/sponsors/Kaskitupa.png" class="companyLogo" alt="Pub Kaskitupa"/>
-                    <img src="/images/sponsors/Hiisi.png" class="companyLogo" alt="Hiisi"/>
-                    <img src="/images/sponsors/Vemmelsääri.png" class="companyLogo" alt="Vemmelsääri"/>
-                    <img src="/images/sponsors/Vihtahousu.png" class="companyLogo" alt="Vihtahousu"/>
-                    <img src="/images/sponsors/Sherwood.png" class="companyLogo" alt="Sherwood"/>
-                    <img src="/images/sponsors/Tuiske.png" class="companyLogo" alt="Bar Tuiske"/>
-                    <img src="/images/sponsors/London.svg" class="companyLogo" alt="London"/>
-                    <img src="/images/sponsors/Ticketless.svg" class="companyLogo" alt="Ticketless"/>
                     <img src="/images/sponsors/Tek.png" class="companyLogo" alt="TEK"/>
+                    <img src="/images/sponsors/Teerenpeli.png" class="companyLogo" alt="Teerenpeli"/>
+                    <img src="/images/sponsors/Helmi.png" class="companyLogo" alt="Karaoke Bar Helmi"/>
+                    <img src="/images/sponsors/Ylaruth.svg" class="companyLogo" alt="Yläruth" style="filter: invert(1);"/>
+                    <img src="/images/sponsors/Hiisi.png" class="companyLogo" alt="Hiisi"/>
+                    <img src="/images/sponsors/Delorean.png" class="companyLogo" alt="Delorean"/>
+                    <img src="/images/sponsors/Pääkonttori.png" class="companyLogo" alt="Pub Pääkonttori"/>
+                    <img src="/images/sponsors/Kierre.png" class="companyLogo" alt="Pub Kierre"/>
+                    <img src="/images/sponsors/Cheers.png" class="companyLogo" alt="Cheers"/>
+                    <img src="/images/sponsors/Unelma.png" class="companyLogo" alt="Unelma"/>
+                    <img src="/images/sponsors/Tuiteri.png" class="companyLogo" alt="Bar Tuiteri"/>
+                    <img src="/images/sponsors/Kaskitupa.png" class="companyLogo" alt="Pub Kaskitupa"/>
+                    <img src="/images/sponsors/Tuiske.png" class="companyLogo" alt="Bar Tuiske"/>
+                    <img src="/images/sponsors/Muurmanni.png" class="companyLogo" alt="Muurmanni"/>
                 </div>
             </div>
         </div>
@@ -387,7 +380,7 @@
         <div id="somet">
             <a href="https://www.facebook.com/jyvasmetro/" class="fa fa-facebook"></a>
             <a href="https://www.instagram.com/jyvasmetro/" class="fa fa-instagram"></a>
-	        <a href="https://t.me/jyvasmetro2024" class="fa fa-telegram" hidden></a>
+	        <a href="https://t.me/jyvasmetro2025" class="fa fa-telegram"></a>
         </div>
     </div>
     <!-- /.container -->
