Made banner video to load at higher priority

--- a/www/index.html
+++ b/www/index.html
@@ -86,7 +86,7 @@
 
 <header class="bg-primary text-white">
     <video id="background-video" playsinline autoplay loop muted poster="">
-        <source src="/images/jyvasmetro.webm" type="video/webm">
+        <source src="/images/jyvasmetro.webm" type="video/webm" fetchpriority="high">
     </video>
     <div class="container">
         <div class="col-lg-7 col-md-6 mx-auto logo-container">
