--- a/www/index.html
+++ b/www/index.html
@@ -67,7 +67,7 @@
                 <li class="nav-item" hidden>
                     <a class="nav-link js-scroll-trigger" href="#lipunmyynti_vaihto_info" data-t>section.ticket-exchange.title</a>
 		        </li>
-                <li class="nav-item" hidden>
+                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#aikataulu" data-t>section.timetable.title</a>
 		        </li>
                 <li class="nav-item">
@@ -257,7 +257,7 @@
     </div>
 </section>
 
-<section id="aikataulu" class="white-section" hidden>
+<section id="aikataulu" class="white-section">
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-6 col-md-6 mx-auto text-align-center">
