Updated wrong lyrics in helan går

--- a/laulut/index.html
+++ b/laulut/index.html
@@ -62,7 +62,7 @@
             En liten fågel satt en gång <br />
             och sjöng i furuskog. <br />
             Han hade sjungit dagen lång <br />
-            dock ej sjungit nog.
+            men dock ej sjungit nog.
           </p>
           <p>Vad sjöng den lilla fågeln då? JO!</p>
 
