Event ended update

--- a/www/index.html
+++ b/www/index.html
@@ -58,19 +58,19 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#mita" data-t>section.what.title</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" hidden>
                     <a class="nav-link js-scroll-trigger" href="#lipunmyynti" data-t>section.tickets.title</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" hidden>
                     <a class="nav-link js-scroll-trigger" href="#jatkot" data-t>section.afterparty.title</a>
                 </li>
                 <li class="nav-item" hidden>
                     <a class="nav-link js-scroll-trigger" href="#lipunmyynti_vaihto_info" data-t>section.ticket-exchange.title</a>
 		        </li>
-                <li class="nav-item">
+                <li class="nav-item" hidden>
                     <a class="nav-link js-scroll-trigger" href="#aikataulu" data-t>section.timetable.title</a>
 		        </li>
-                <li class="nav-item">
+                <li class="nav-item" >
                     <a class="nav-link js-scroll-trigger" href="#baarit" data-t>section.partners.menu-title</a>
                 </li>
                 <li class="nav-item">
@@ -109,7 +109,7 @@
             <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
                 <h1 class="blue-text" data-t>event.name-with-year</h1>
                 <br>
-                <p>
+                <p hidden>
                     <a
                         class="big-link js-scroll-trigger"
                         href="#lipunmyynti"
@@ -117,12 +117,12 @@
                         data-t="section.info.to-sales"
                     ></a>
                 </p>
-                <p data-t hidden>section.info.thanks</p>
+                <p data-t>section.info.thanks</p>
                 <p data-t hidden>section.info.secondary-market</p>
-                <p data-t>section.info.p1</p>
+                <p data-t hidden>section.info.p1</p>
                 <!-- <br> -->  
                 <p data-t>section.info.follow</p>
-                <p data-t>section.info.p2</p>
+                <p data-t hidden>section.info.p2</p>
             </div>
         </div>
     </div>
@@ -163,7 +163,7 @@
     </div>
 </section>
 
-<section id="lipunmyynti" class="white-section">
+<section id="lipunmyynti" class="white-section" hidden>
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-6 col-md-6 mx-auto text-align-center"><h2 class="orange-text" data-t>section.tickets.title</h2>
@@ -179,7 +179,7 @@
     </div>
 </section>
 
-<section id="jatkot" class="grey-section">
+<section id="jatkot" class="grey-section" hidden>
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
@@ -257,7 +257,7 @@
     </div>
 </section>
 
-<section id="aikataulu" class="white-section">
+<section id="aikataulu" class="white-section" hidden>
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-6 col-md-6 mx-auto text-align-center">
